Обновила файл, добавила інфо про Миколу

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li>
                     <img src="./image/nikolay.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
-                    <p></p>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./image/mikhail.jpg" alt="Михаил Ермаков" width="270">
