--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="#">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
                 <ul>
-                    <li> <a href="">Студия</a> </li>
+                    <li> <a href="./index.html">Студия</a> </li>
                     <li><a href="">Портфолио</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+             
     </header>
     <main>
         <!-- Герой -->
@@ -53,17 +56,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="./image/computer.jpg" alt="Пишем сайты" width="370">
-                    </a>
+                    <img src="./image/computer.jpg" alt="Пишем сайты" width="370">
                 </li>
-                <li><a href="">
-                        <img src="./image/phone.jpg" alt="Адаптируем" width="370">
-                    </a>
+                <li>
+                    <img src="./image/phone.jpg" alt="Адаптируем" width="370">
                 </li>
-                <li><a href="">
-                        <img src="./image/color.png" alt="Стилизируем" width="370">
-                    </a>
+                <li>
+                    <img src="./image/color.png" alt="Стилизируем" width="370">
                 </li>
             </ul>
         </section>
@@ -96,10 +95,13 @@
     </main>
     <!-- Футер -->
     <footer>
-        <a href="#">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="./index.html">WebStudio</a>
+        <address>
+            <ul>
+                <li><a href="https://goo.gl/maps/9Z7qe7YCzhTjA3D87" target="_blank" rel="nofollow noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
         </address>
         
     </footer>
