--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <img src="./image/phone.jpg" alt="Адаптируем" width="370">
                 </li>
                 <li>
-                    <img src="./image/color.png" alt="Стилизируем" width="370">
+                    <img src="./image/color.jpg" alt="Стилизируем" width="370">
                 </li>
             </ul>
         </section>
